# TinyFixedAllocator

./: .gitignore  CMakeLists.txt
.github/workflows/: macos_xcode.yml  macos_xcode_cov.yml
src/: TinyFixedAllocator.hh
test/: TinyFixedAllocatorTest.cc
